examples/invalid/ns/memory/hello_task_glm_optional_payload_invalid.ns
mod cpu Main {
  async fn ping(value: i64?) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    return 1;
  }
}
